# eng-fren-transformer

enc-dec-transformer/: Makefile  README.md  pyproject.toml
enc-dec-transformer/Docker/: docker-compose.yml
enc-dec-transformer/models/: enc-dec.py  train.py  transformer.py
enc-dec-transformer/models/Layers/: decoder.py  encoder.py  multi_head_attention.py  positional_encoding.py
enc-dec-transformer/models/training/: data_pipeline.py  training_utils.py
enc-dec-transformer/notebooks/: eng_frenTransformer(es) (1).ipynb
